# Mandelbrot_Parallel

./: .gitignore  CMakeLists.txt  README.md  mandelbrot  mandelbrot_mpi  record.sh  record_mpi.sh  recordg16.sh
results/: classic_orange.ppm  default.ppm  mandelbrot.ppm  output_green.ppm  output_green2.ppm  output_white_pixels_black_spot.ppm  purple_close.ppm  small_checked_pink_black_white.ppm
src/: dynamic_no_output.cpp  main.cpp  main_mpi.cpp  main_mpi_smart.cpp  main_threaded.cpp  static_no_output.cpp  util.h
stats/: 02.06.csv  03.06.csv  dynamic.csv  dynamic_no_output.csv  mpi.csv  mpi.txt
